[package]
name = "deep_q_learning_self_driving_car"
version = "0.1.0"
description = "A Tauri App"
authors = ["Alex Chesnay <me@alex-chesnay.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deep_q_learning_self_driving_car_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = "0.17.0"
window-vibrancy = "0.5.1"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
